--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/index.css">
     <link rel="stylesheet" href="./assets/reset.css">
+
 </head>
 
 <body>
     <div id="game">
         <div class="bird"></div>
-        <div class="start start-blue">点击开始</div>
+        <div class="start start-white">点击开始</div>
         <div class="score">0</div>
         <div class="mask"></div>
         <div class="end">
@@ -39,6 +40,11 @@
             <div class="restart">重新开始</div>
         </div>
     </div>
+
+    <script src="./index.js"></script>
+    <script>
+        bird.init();
+    </script>
 </body>
 
 </html>
