--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Play Flappy Bird</title>
     <link rel="stylesheet" href="./assets/index.css">
     <link rel="stylesheet" href="./assets/reset.css">
 
@@ -39,12 +39,14 @@
             </ul>
             <div class="restart">重新开始</div>
         </div>
+        <!-- <div class="pipe pipe-top"></div>
+        <div class="pipe pipe-bottom"></div> -->
     </div>
-
-    <script src="./index.js"></script>
-    <script>
-        bird.init();
-    </script>
 </body>
+<script src="./utils.js"></script>
+<script src="./index.js"></script>
+<script>
+    bird.init();
+</script>
 
 </html>
