[新增]基本完成游戏所有功能

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="result">Your Result:</div>
             <div class="final-score">0</div>
             <ul class="rank-list">
-                <li class="rank-item">
+                <!-- <li class="rank-item">
                     <span class="rank-degree first">1</span>
                     <span class="rank-score">25</span>
                     <span class="rank-time">2020.06.15 23:10:27</span>
@@ -35,7 +35,7 @@
                     <span class="rank-degree third">3</span>
                     <span class="rank-score">25</span>
                     <span class="rank-time">2020.06.15 23:10:27</span>
-                </li>
+                </li> -->
             </ul>
             <div class="restart">重新开始</div>
         </div>
